--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
           <target>21</target>
         </configuration>
       </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0</version>
+      </plugin>
     </plugins>
   </build>
 </project>
