--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <packaging>jar</packaging>
 
   <properties>
+    <restassured.version>3.3.0</restassured.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
